[package]
name = "fivim-rs-encrypt"
description = "Rust encryption library for fivim."
version = "1.0.0"
authors = ["newproplus <https://github.com/newproplus>"]
homepage = "https://github.com/fivim/fivim-rs-encrypt"
repository = "https://github.com/fivim/fivim-rs-encrypt"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
aes = "^0.8"
anyhow = "^1.0"
base64 = "^0.21"
cbc = "^0.1"
ccm = "^0.5"
chacha20poly1305 = { version = "^0.10", features = ["stream"] }
rand = "^0.8"
rand_core = "^0.6"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
aes-gcm = "^0.10"
fivim-rs-utils = "1.0.0"
